--- a/projetocss2/index.html
+++ b/projetocss2/index.html
@@ -21,10 +21,10 @@
         </section> 
         <section class="container-right">
             <header>
-                <a>Home</a>
-                <a>Work</a>
-                <a>About</a>
-                <a>Contact</a>
+                <a>HOME</a>
+                <a>WORK</a>
+                <a>ABOUT</a>
+                <a>CONTACT</a>
             </header>
             <img class="girl-cellphone" src="./assets/Illustration-3-3.png" alt="girl-cellphone"/>
         </section>
